# Refl

./: .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/Calculator/Source/: CMakeLists.txt
Example/Calculator/Source/Private/: Main.cpp
Example/Calculator/Source/Public/: Calculator.h
Example/Executable/Source/: CMakeLists.txt
Example/Executable/Source/Private/: Main.cpp
Example/Executable/Source/Public/: ExampleExecutableExport.h  ExampleLibraryExport.h  Executable.h
Example/Tool/Source/: CMakeLists.txt
Example/Tool/Source/Private/: Tool.cpp
Example/Tool/Source/Public/: Tool.h  ToolExport.h
ReflGenerator/: CMakeLists.txt  Main.cpp  ReflMatchFinder.h  cmake.bat  config_llvm_refl_generator_cmake.py  llvm-clang-tools-extra.CMakeLists.txt
Source/: CMakeLists.txt
Source/Private/: AsyncTask.cpp  Logger.cpp  PlatformAbstract.cpp  ReflClass.cpp  ReflCore.cpp  ReflJson.cpp  ReflModule.cpp  ReflRecord.cpp  ReflStruct.cpp  ReflType.cpp  ReflTypeImpl.cpp
Source/Public/: AsyncTask.h  ContainerTemplate.h  CppStandardLibrary.h  Delegate.h  Logger.h  PlatformAbstract.h  Queue.h  Refl.h  ReflClass.h  ReflCore.h  ReflEnum.h  ReflField.h  ReflFunction.h  ReflHelper.h  ReflJson.h  ReflMacro.h  ReflModule.h  ReflProperty.h  ReflRecord.h  ReflStdContainer.inl  ReflStdMapContainer.h  ReflStdMapContainer.inl  ReflStdSetContainer.h  ReflStdSetContainer.inl  ReflStdVectorContainer.h  ReflStdVectorContainer.inl  ReflStruct.h  ReflType.h  ReflTypeImpl.h
cmake/: refl_generator.cmake
